; ModuleID = '/home/carl/AnghaBench/vim.js/src/extr_blowfish.c_bf_crypt_restore.c'
source_filename = "/home/carl/AnghaBench/vim.js/src/extr_blowfish.c_bf_crypt_restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@save_randbyte_offset = common dso_local global i32 0, align 4
@randbyte_offset = common dso_local global i32 0, align 4
@save_update_offset = common dso_local global i32 0, align 4
@update_offset = common dso_local global i32 0, align 4
@ofb_buffer = common dso_local global i32 0, align 4
@save_ofb_buffer = common dso_local global i32 0, align 4
@BF_OFB_LEN = common dso_local global i32 0, align 4
@pax = common dso_local global i32 0, align 4
@save_pax = common dso_local global i32 0, align 4
@sbx = common dso_local global i32 0, align 4
@save_sbx = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bf_crypt_restore() #0 {
  %1 = load i32, i32* @save_randbyte_offset, align 4
  store i32 %1, i32* @randbyte_offset, align 4
  %2 = load i32, i32* @save_update_offset, align 4
  store i32 %2, i32* @update_offset, align 4
  %3 = load i32, i32* @ofb_buffer, align 4
  %4 = load i32, i32* @save_ofb_buffer, align 4
  %5 = load i32, i32* @BF_OFB_LEN, align 4
  %6 = call i32 @mch_memmove(i32 %3, i32 %4, i32 %5)
  %7 = load i32, i32* @pax, align 4
  %8 = load i32, i32* @save_pax, align 4
  %9 = call i32 @mch_memmove(i32 %7, i32 %8, i32 72)
  %10 = load i32, i32* @sbx, align 4
  %11 = load i32, i32* @save_sbx, align 4
  %12 = call i32 @mch_memmove(i32 %10, i32 %11, i32 4096)
  ret void
}

declare dso_local i32 @mch_memmove(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
